@@ -28,4 +28,5 @@ Cameron Stenmark                Acknowledged
 2/14/2016   Implemented player view - Austin
 2/14/2016   Added stock history for stock view - Cameron & John
 2/14/2016   Added navbar and updated styling - Cameron
-2/14/2015   Added Player holdings tables
+2/14/2015   Added Player holdings table - Austin 
+2/14/2015   Added Player activity table and total player equity field - Austin
